--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "@nestjs/common": "^6.0.4",
     "@nestjs/core": "^6.0.4",
-    "@nestjs/microservices": "^6.0.4",
+    "@nestjs/microservices": "^6.1.1",
     "@nestjs/platform-express": "^6.0.4",
     "@nestjs/websockets": "^6.0.4",
+    "redis": "^2.8.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "2.6.3",
     "rxjs": "6.4.0"
@@ -33,6 +34,7 @@
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/redis": "^2.8.12",
     "@types/supertest": "2.0.7",
     "concurrently": "^4.1.0",
     "jest": "24.7.1",
